--- a/src/Pages/Appoinment_Page/Appoinment_page.css
+++ b/src/Pages/Appoinment_Page/Appoinment_page.css
@@ -1,5 +1,44 @@
-.bg-url{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.bg-url {
     background-image: url(../../../public//image//Appoinment_bg/appo.png);
-    opacity: 100;
     height: 100%;
+}
+
+#book_to_click {
+    display: none;
+}
+
+.main_book_modal,
+.modal_content_book {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.modal_content_book {
+    opacity: 0;
+    visibility: hidden;
+    width: 400px;
+    height: 500px;
+    border: 1px solid rgb(179, 178, 178);
+    border-radius: 10px;
+    transition: .3s ease-in;
+    background: white;
+    padding: 20px;
+    --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+    --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    --tw-shadow-color: #a6a8ac;
+    --tw-shadow: var(--tw-shadow-colored);
+}
+
+#book_to_click:checked~.modal_content_book {
+    opacity: 1;
+    visibility: visible;
 }
